--- a/views/auth/login.ejs
+++ b/views/auth/login.ejs
@@ -8,7 +8,7 @@
         <%- include('../includes/navigation.ejs') %>
 
             <main>
-                <form class="login-form" action="/login" method="POST">
+                <form class="login-form" action="/login" method="post">
                     <div class="form-control">
                         <label for="email">E-mail</label>
                         <input type="text" name="email" id="email">
