--- a/views/shop/index.ejs
+++ b/views/shop/index.ejs
@@ -27,10 +27,11 @@
                                     </p>
                                 </div>
                                 <div class="card__actions">
-                                  
-                                    <a class="btn" href="/products/<%= product._id %>" >Details</a>
-                                   <%- include('../includes/add-to-cart.ejs' , {product : product}) %>
 
+                                    <a class="btn" href="/products/<%= product._id %>">Details</a>
+                                    <% if(isAuthenticated) { %>
+                                        <%- include('../includes/add-to-cart.ejs' , {product : product}) %>
+                                            <% } %>
                                 </div>
                             </article>
                             <% } %>
