--- a/views/shop/product-list.ejs
+++ b/views/shop/product-list.ejs
@@ -29,7 +29,9 @@
                                 <div class="card__actions">
                                   
                                     <a class="btn" href="/products/<%= product._id %>" >Details</a>
+                                    <% if(isAuthenticated) { %>
                                    <%- include('../includes/add-to-cart.ejs' , {product : product}) %>
+                                   <% } %>
 
                                 </div>
                             </article>
