--- a/views/auth/login.ejs
+++ b/views/auth/login.ejs
@@ -8,6 +8,10 @@
         <%- include('../includes/navigation.ejs') %>
 
             <main>
+                <% if (errorMessage) { %>
+                    <div class="user-message user-message--error"><%= errorMessage %></div>
+                <% } %>
+        
                 <form class="login-form" action="/login" method="post">
                     <div class="form-control">
                         <label for="email">E-mail</label>
@@ -15,10 +19,10 @@
 
                     </div>
                     <div class="form-control">
-                        <label for="password">PassWord</label>
-                        <input type="text" name="password" id="password">
+                        <label for="password">Password</label>
+                        <input type="password" name="password" id="password">
                     </div>
-
+                    <input type="hidden" name="_csrf" value="<%= csrfToken %>">
                     <button class="btn" type="submit">Login</button>
                 </form>
             </main>
