--- a/views/shop/cart.ejs
+++ b/views/shop/cart.ejs
@@ -16,6 +16,8 @@
                                 </h2>
                                 <form action="/cart-delete-item" method="POST">
                                     <input type="hidden" value="<%= p.productId._id%>" name="productId">
+                    <input type="hidden" name="_csrf" value="<%= csrfToken %>">
+
                                     <button class="btn danger" type="submit">Delete</button>
                                 </form>
                             </li>
@@ -25,6 +27,8 @@
                     <div class="centered">
 
                         <form action="/create-ordre" method="post">
+                    <input type="hidden" name="_csrf" value="<%= csrfToken %>">
+
                             <button type="submit" class="btn">Order Now</button>
                         </form>
                     </div>
