--- a/views/auth/reset.ejs
+++ b/views/auth/reset.ejs
@@ -12,21 +12,14 @@
                     <div class="user-message user-message--error"><%= errorMessage %></div>
                 <% } %>
         
-                <form class="login-form" action="/login" method="post">
+                <form class="login-form" action="/reset" method="post">
                     <div class="form-control">
                         <label for="email">E-mail</label>
                         <input type="text" name="email" id="email">
 
                     </div>
-                    <div class="form-control">
-                        <label for="password">Password</label>
-                        <input type="password" name="password" id="password">
-                    </div>
                     <input type="hidden" name="_csrf" value="<%= csrfToken %>">
-                    <button class="btn" type="submit">Login</button>
+                    <button class="btn" type="submit">Reset Password</button>
                 </form>
-                <div class="centered">
-                    <a href="/reset">Reset Password</a>
-                </div>
             </main>
             <%- include('../includes/end.ejs') %>
