--- a/views/admin/products.ejs
+++ b/views/admin/products.ejs
@@ -44,3 +44,4 @@
                         <% } %>
             </main>
             <%- include('../includes/end.ejs') %>
+            <script src="js/admin.js"></script>
