--- a/views/shop/index.ejs
+++ b/views/shop/index.ejs
@@ -35,6 +35,10 @@
                                 </div>
                             </article>
                             <% } %>
+                            <section class="pagination">
+                                <a href="/?page=1">1</a>
+                                <a href="/?page=2">2</a>
+                            </section>
                     </div>
                     <% } else { %>
                         <h1>No Products Found!</h1>
