--- a/views/admin/products.ejs
+++ b/views/admin/products.ejs
@@ -16,7 +16,7 @@
                                     </h1>
                                 </header>
                                 <div class="card__image">
-                                    <img class="image" src="/<%= product.imageUrl %>.png" alt="<%= product.title %>">
+                                    <img class="image" src="/<%= product.imageUrl %>" alt="<%= product.title %>">
                                 </div>
                                 <div class="card__content">
                                     <h2 class="product__price">$
@@ -28,12 +28,12 @@
                                 </div>
                                 <div class="card__actions">
                                     <a href="/admin/edit-product/<%= product._id%>?edit=true" class="btn">Edit</a>
-                                    <form action="/admin/delete-product" method="POST">
+                     
                                         <input type="hidden" name="productId" value="<%= product._id %>">
                                         <input type="hidden" name="_csrf" value="<%= csrfToken %>">
 
-                                        <button class="btn" type="submit">Delete</button>
-                                    </form>
+                                        <button class="btn" type="button" onclick="deleteProduct(this)">Delete</button>
+                           
 
                                 </div>
                             </article>
@@ -44,4 +44,4 @@
                         <% } %>
             </main>
             <%- include('../includes/end.ejs') %>
-            <script src="js/admin.js"></script>
+            <script src="/js/admin.js"></script>
