--- a/views/shop/product-detail.ejs
+++ b/views/shop/product-detail.ejs
@@ -7,7 +7,7 @@
             <h1><%= product.title %> </h1>
             <hr>
             <div class="centered">
-                <img  class="image" src="/<%= product.imageUrl %>.png" alt="<%= product.title %>">
+                <img  class="image" src="/<%= product.imageUrl %>" alt="<%= product.title %>">
             
             </div>
             <h2><%= product.price %></h2>
